samples/_failures_safe/1761498826_8cf744_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e4cd976.c: In function ‘tokenize’:
./samples/SAFE/__tmp_9e4cd976.c:158:22: error: expected declaration or statement at end of input
  158 | void tokenize(struct Tokenizer *tokenizer) {
      |                      ^~~~~~~~~
